--- a/index.html
+++ b/index.html
@@ -4,12 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alejandro Bellón Ample</title>
+    <title></title>
     <link rel="stylesheet" href="./assets/css/index.css">
 </head>
-<body>
-    <header>
-        <a href="mailto:mail@aabbaa.eu">mail</a> [at] aa<span>lejandro</span>bb<span>ellón</span>aa<span>mple</span> [dot] <a href="https://www.google.com/maps/place/Gneisenaustra%C3%9Fe+16,+10961+Berlin/@52.4916338,13.390069,17z/data=!3m1!4b1!4m5!3m4!1s0x47a850282069437d:0xec2dbff8ad59a60d!8m2!3d52.4916338!4d13.3922576" target="_blank">eu</a><span>rope</span><br>
-    </header>
-</body>
+<body></body>
 </html>
